--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         Structure and Algorithm (DSA) underscores expertise. Aditya's educational journey is
                         complemented by accomplishments such as successful completion of a Full Stack Web Development
                         course under Dr. Angela Yu, affirming versatility and commitment to excellence.</p>
-                    <a href="AdityaCV.pdf">Download CV</a>
+                    <a href="AdityaResume.pdf">Download CV</a>
                 </div>
             </div>
         </div>
